cmake_minimum_required(VERSION 3.8)
project(record-video)
set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
#add_definitions(-DNSHOW)
add_executable(record-video record-video.cpp)
target_link_libraries(record-video ${OpenCV_LIBS} realsense2)
